Replace Collections with Set.of/Map.of/List.of